# SALR3YUCUDA

./: .gitignore  BUGFIXES.md  CMakeLists.txt  LICENSE  Makefile  README.md  run.sh  run_cuda.sh  run_gui.sh
analysis/results/13th_Gen_Intel_R_Core_TM_i7-13700H_NVIDIA_GeForce_RTX_4060_Laptop_GPU/: benchmark_20260404_220500.csv  benchmark_20260404_220500_info.txt  benchmark_20260502_143156.csv  benchmark_20260502_143156_info.txt  benchmark_20260503_220415.csv  benchmark_20260503_220415_info.txt  benchmark_merged.csv  benchmark_summary.txt
analysis/results/AMD_EPYC_9754_128-Core_Processor_No_GPU/: benchmark_20260503_153309.csv  benchmark_20260503_153309_info.txt
analysis/results/AMD_Ryzen_Threadripper_PRO_5975WX_32-Cores_NVIDIA_GeForce_RTX_5090/: benchmark_20260503_153807.csv  benchmark_20260503_153807_info.txt  benchmark_20260503_213410.csv  benchmark_20260503_213410_info.txt  benchmark_merged.csv
analysis/results/AMD_Ryzen_Threadripper_PRO_5975WX_32-Cores_No_devices_were_found/: benchmark_20260502_222755.csv  benchmark_20260502_222755_info.txt
analysis/results/real_params_cuda_vs_cpu_20260412_212754/: metrics.csv  summary.txt
analysis/results/real_params_cuda_vs_cpu_20260412_212754/cpu/: parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260412_212754/cuda/: parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260412_221137/: metrics.csv  summary.txt
analysis/results/real_params_cuda_vs_cpu_20260412_221137/cpu/: parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260412_221137/cuda/: parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260413_010021/: metrics.csv  summary.txt
analysis/results/real_params_cuda_vs_cpu_20260413_010021/cpu/: parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260413_010021/cuda/: parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260502_212517/: metrics.csv  summary.txt
analysis/results/real_params_cuda_vs_cpu_20260502_212517/cpu/: input_used.cfg  parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260502_212517/cuda/: input_used.cfg  parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260503_170835/: metrics.csv  summary.txt
analysis/results/real_params_cuda_vs_cpu_20260503_170835/cpu/: input_used.cfg  parameters.cfg
analysis/results/real_params_cuda_vs_cpu_20260503_170835/cuda/: input_used.cfg  parameters.cfg
configs/: README.md  benchmark.cfg  default.cfg
database_engine/: CMakeLists.txt  README.md
database_engine/docs/: Concept.md  Integration_Summary.md
database_engine/include/: db_engine.h  db_utils.h  hdf5_io.h  registry.h
database_engine/python/: __init__.py  cli.py  salr_db.py
database_engine/src/: db_engine.c  db_utils.c  hdf5_io.c  registry.c
database_engine/tests/: test_hdf5.c  test_integration.c  test_registry.c
docs/: BUG_REPORT.md  BUILD.md  Project_Description.md  Task.md
docs/report/: Annotation.md  ReportStructure.md
docs/report/SALR3YUCUDA/: SALR3YUCUDA.tex  SALR3YUCUDA_template.tex
docs/report/requirements/: Course_Requirements.md
docs/report/sources/: royallHuntingMermaidsSoftMatter2018.md
include/: README.md  config.h  grid.h  io.h  math_utils.h  potential.h  solver.h
output/: README.md  convergence.gp  density_species1_final.gp  density_species2_final.gp  parameters.cfg
scripts/: README.md  benchmark_cuda_cpu.py  compare_integral_benchmark.py  density_browser.gp  density_browser_merged.gp  performance_real_params.py  plot_density.py  plot_density_3d.py  plot_joint_heatmap.py  rebuild_db_engine.sh  run_benchmarks.py
scripts/benchmarking/: benchmark_cuda_cpu.py  performance_real_params.py  run_benchmarks.py
scripts/cluster/: job_benchmark_cpu_epyc.sh  job_benchmark_cpu_threadripper.sh  job_benchmark_cuda_only.sh  job_benchmark_gpu.sh
scripts/maintenance/: rebuild_db_engine.sh  verify_db_integration.sh
scripts/plotting/: density_browser.gp  density_browser_merged.gp  plot_cluster_vs_laptop.py  plot_density.py  plot_density_3d.py  plot_joint_heatmap.py
src/: README.md  main.c
src/core/: README.md  config.c  grid.c
src/cpu/: MATH.md  README.md  math_utils_cpu.c  potential_cpu.c  solver_cpu.c
src/cuda/: README.md  math_utils_cuda.cu  potential_cuda.cu  solver_cuda.cu
src/math/: README.md
src/utils/: README.md  io.c
studying/: README.md
tests/: README.md  benchmark_integral.c  benchmark_integral_cuda.cu  test_potential.c  test_solver.c
visualization_gui/: CMakeLists.txt
visualization_gui/include/: ConfigEditorDialog.h  DatabaseWrapper.h  HeatmapWidget.h  MainWindow.h  ParameterDisplayWidget.h  RunControlWidget.h  ScatterPlotWidget.h  SessionBrowserWidget.h  SimulationRunner.h  SnapshotBrowserWidget.h  SnapshotSelectorDialog.h  Types.h  VisualizationWidget.h
visualization_gui/src/: ConfigEditorDialog.cpp  DatabaseWrapper.cpp  HeatmapWidget.cpp  MainWindow.cpp  ParameterDisplayWidget.cpp  RunControlWidget.cpp  ScatterPlotWidget.cpp  SessionBrowserWidget.cpp  SimulationRunner.cpp  SnapshotBrowserWidget.cpp  SnapshotSelectorDialog.cpp  VisualizationWidget.cpp  main.cpp
